--- a/Q2a.css
+++ b/Q2a.css
@@ -7,4 +7,35 @@ select
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.0rem;
 
+    
 }
+body
+{
+    margin: 0;
+    padding: 0;
+}
+.header 
+{
+    
+    background-color: silver;
+   
+}
+.nav li
+{
+    display: inline;
+    
+}
+.log
+{
+    float: right;
+}
+   
+   
+  
+   
+
+
+
+
+
+
