--- a/Q2a.css
+++ b/Q2a.css
@@ -1,33 +1,22 @@
 /* Set the fonts for the page */
-body,
-input,
-textarea,
-select 
-{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.0rem;
-
-    
-}
 body
 {
     margin: 0;
     padding: 0;
+    background-color: lightgray;
+    text-align: center;
 }
-.header 
+.header
 {
-    
-    background-color: silver;
-   
+    background-color: rgb(174, 209, 239);
+    padding: 15px;
+    box-shadow: 0 0 3px blackf;
 }
-.nav li
+
+.header li
 {
     display: inline;
-    
-}
-.log
-{
-    float: right;
+    padding: 45px;
 }
    
    
