--- a/Question2a/Q2a.css
+++ b/Question2a/Q2a.css
@@ -39,7 +39,7 @@ body
     float: right;
     position: relative;
     top: -15px;
-    right: 25px;
+    right: 10px;
     box-shadow: 0 0 2px black;
     cursor: pointer;
 
@@ -49,6 +49,70 @@ body
     color: blue;
     background-color: antiquewhite;
 }
+img
+{
+    width: 50px;
+    height: 50px;
+    object-fit: contain;
+    cursor: pointer;
+    
+}
+.logo
+{
+    width: 50px;
+    height: 50px;
+    float: left;
+    
+}
+
+.user
+{
+   
+   float: right;
+   right: 85px;
+   top: -70px;
+   position: relative;
+}
+
+.form
+{
+    
+    padding: 0.6rem;
+    box-sizing: border-box;
+    background-color: rgb(131, 127, 127);
+    width: 40rem;
+    margin: auto;
+    max-width: 100%;
+
+}
+
+.form-group
+{
+    display: block;
+    margin: 0.5rem;
+    
+}
+
+.form-group label
+{
+    padding: 0.5rem;
+    display: inline-block;
+    box-sizing: border-box;
+    min-width: 10rem;
+    max-width: 100%;
+
+}
+
+.form-group textarea
+{
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+}
+
+
+
+
 
    
    
